--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,8 +2,12 @@ name: pygama
 
 on:
   push:
-    paths-ignore:
-      - '**.md'
+    branches:
+      - master
+      - dev
+      - 'releases/**'
+    tags: '*'
+  release:
 
 jobs:
 
